# moderncmake

./: README.md
src/: CMakeLists.txt
src/myapp/: CMakeLists.txt
src/mylibrary/src/: CMakeLists.txt
